--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://HenokGebresenbet.github.io/Henok-Portfolio-main",
+  "homepage": "http://HenokGebresenbet.github.io/Henok-Portfolio-one",
   "name": "henok-portfolio-one",
   "version": "0.1.0",
   "private": true,
